--- a/web-app/tds/web-app/app-js/modules/importBatch/components/record/import-batch-record-fields.component.html
+++ b/web-app/tds/web-app/app-js/modules/importBatch/components/record/import-batch-record-fields.component.html
@@ -1,7 +1,17 @@
 <div class="import-batch-record-fields-component fields-container row" *ngIf="fieldsInfo">
 
     <!-- Fields Info Popup -->
-    <kendo-popup #infoPopup *ngIf="popup.show" class="fields-info-popup"
+    <field-reference-popup *ngIf="popup.show"
+                           [mouseEvent]="popup.mouseEvent"
+                           [type]="popup.type"
+                           [domain]="popup.domain"
+                           [results]="popup.results"
+                           [gridData]="popup.gridData"
+                           [gridGroups]="popup.gridGroups"
+                           (onClose)="popup.show = false">
+    </field-reference-popup>
+
+    <!--<kendo-popup #infoPopup *ngIf="popup.show" class="fields-info-popup"
                  [margin]="popup.margin"
                  [popupClass]="'content popup'"
                  [offset]="popup.offset"
@@ -16,7 +26,7 @@
             </div>
             <div class="popup-body">
 
-                <!-- Find Type-->
+                &lt;!&ndash; Find Type&ndash;&gt;
                 <div class="find-field-info" *ngIf="popup.type === FieldInfoType.FIND">
                     <kendo-grid [data]="popupGridData"
                                 [groupable]="false" [group]="popupGridGroups">
@@ -38,7 +48,7 @@
                     </div>
                 </div>
 
-                <!-- Create/Update Type-->
+                &lt;!&ndash; Create/Update Type&ndash;&gt;
                 <div class="create-update-field-info" *ngIf="popup.type === FieldInfoType.CREATE || popup.type === FieldInfoType.UPDATE">
                     <div>
                         <label>Domain: {{popup.domain}}</label>
@@ -51,7 +61,7 @@
 
             </div>
         </div>
-    </kendo-popup>
+    </kendo-popup>-->
 
     <kendo-grid
             [data]="gridData"
@@ -117,6 +127,8 @@
                 </div>
             </ng-template>
         </kendo-grid-column>
+
+        <!-- Reference Icons Column -->
         <kendo-grid-column title="Reference" [width]="80">
             <ng-template kendoGridCellTemplate let-dataItem>
                 <i *ngIf="dataItem.create" (click)="onShowPopup($event, FieldInfoType.CREATE, dataItem)"
