--- a/web-app/tds/web-app/css/page/index.sass
+++ b/web-app/tds/web-app/css/page/index.sass
@@ -27,5 +27,6 @@
 @import "module/importBatch/import-batch-record-summary-component"
 @import "module/importBatch/import-batch-record-fields-component"
 @import "module/importBatch/import-assets.component"
+@import "module/importBatch/field-reference-popup.component"
 @import "module/assetTags/tag-list.component"
 
