TM-12012 * Added field reference popup in ETL Script Transform Results

--- a/web-app/tds/web-app/css/page/module/dataIngestion/data-script-etl-builder-component.sass
+++ b/web-app/tds/web-app/css/page/module/dataIngestion/data-script-etl-builder-component.sass
@@ -45,7 +45,7 @@
     th
       padding-left: 2px
       padding-right: 2px
-    label
+    label:not(.fields-info-popup-label)
       margin-bottom: 0px
       width: 100%
       cursor: pointer
