--- a/web-app/tds/web-app/app-js/modules/importBatch/components/record/field-reference-popup.component.html
+++ b/web-app/tds/web-app/app-js/modules/importBatch/components/record/field-reference-popup.component.html
@@ -6,7 +6,7 @@
     <div class="popup-content" tds-handle-escape (escPressed)="onClose()">
         <div class="popup-header">
             <button #focusElement autofocus class="invisible-button"></button>
-            <label>
+            <label class="fields-info-popup-label">
                 {{getPopupTitle()}}
             </label>
             <i class="glyphicon glyphicon-remove" (click)="onClose()"></i>
