--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -139,7 +139,13 @@
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Estimated Start</span></label>
                                                     </td>
-                                                    <td class="valueNW"><span>{{taskDetailModel.detail?.etStart}}</span></td>
+                                                    <td class="valueNW">
+                                                        <kendo-datepicker
+                                                                name="estimatedStart"
+                                                                [format]="dateFormat"
+                                                                [(value)]="model.estimatedStart">
+                                                        </kendo-datepicker>
+                                                    </td>
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Actual Start</span></label>
                                                     </td>
@@ -168,11 +174,23 @@
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Estimated Finish</span></label>
                                                     </td>
-                                                    <td class="valueNW"><span>{{taskDetailModel.detail?.etFinish}}</span></td>
+                                                    <td class="valueNW">
+                                                        <kendo-datepicker
+                                                                name="estimatedFinish"
+                                                                [format]="dateFormat"
+                                                                [(value)]="model.estimatedFinish">
+                                                        </kendo-datepicker>
+                                                    </td>
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Actual Finish</span></label>
                                                     </td>
-                                                    <td class="valueNW"><span>{{taskDetailModel.detail?.dtResolved}}</span></td>
+                                                    <td class="valueNW">
+                                                        <kendo-datepicker
+                                                                name="actualFinish"
+                                                                [format]="dateFormat"
+                                                                [(value)]="model.actualFinish">
+                                                        </kendo-datepicker>
+                                                    </td>
                                                 </tr>
                                                 <tr *ngIf="!collapsedTaskDetail" class="prop">
                                                     <td class="label U" nowrap="nowrap">
@@ -196,7 +214,13 @@
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Due Date</span></label>
                                                     </td>
-                                                    <td class="valueNW"><span>{{taskDetailModel.detail?.assetComment?.dueDate | date:dateFormat}}</span></td>
+                                                    <td class="valueNW">
+                                                        <kendo-datepicker
+                                                                name="dueDate"
+                                                                [format]="dateFormat"
+                                                                [(value)]="model.dueDate">
+                                                        </kendo-datepicker>
+                                                    </td>
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Duration Delta</span></label>
                                                     </td>
