TM-11703 Add category list

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -196,7 +196,14 @@
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Category</span></label>
                                                     </td>
-                                                    <td class="valueNW"><span>{{taskDetailModel.detail?.assetComment?.category}}</span></td>
+                                                    <td class="valueNW">
+                                                        <kendo-dropdownlist
+                                                                name="category"
+                                                                [data]="model.categoriesList"
+                                                                [(ngModel)]="model.category">
+
+                                                        </kendo-dropdownlist>
+                                                    </td>
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Estimated Duration</span></label>
                                                     </td>
