TM-11703 Add placeholder for duration controls

--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -9,6 +9,18 @@
       display: inline-block
     .modal-body
       height: 86%
+      form
+        .duration-controls
+          display: flex
+          max-width: 200px
+          align-items: center
+          justify-content: space-between
+          input
+            width: 26px
+          label
+            font-weight: normal
+            margin-bottom: 0
+
       .task-layout
         display: flex
         flex-direction: column
