--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -207,7 +207,21 @@
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Estimated Duration</span></label>
                                                     </td>
-                                                    <td class="valueNW"><span>{{taskDetailModel.detail?.durationText}}</span>
+                                                    <td class="valueNW">
+	                                                    <div class="duration-controls">
+                                                            <div>
+	                                                            <input type="text" name="durationDays" id="durationDays">
+	                                                            <label for="durationDays">Days</label>
+                                                            </div>
+                                                            <div>
+	                                                            <input type="text" name="durationHours" id="durationHours">
+	                                                            <label for="durationHours">Hrs</label>
+                                                            </div>
+		                                                    <div>
+			                                                    <input type="text" name="durationMinutes" id="durationMinutes">
+			                                                    <label for="durationMinutes">Min</label>
+		                                                    </div>
+                                                        </div>
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Actual Duration</span></label>
                                                     </td>
