--- a/web-app/css/elements/support/jqDialog.sass
+++ b/web-app/css/elements/support/jqDialog.sass
@@ -56,7 +56,7 @@ div.ui-dialog
       margin-right: 5px !important
       color: $material_c_blue1
       span.ui-icon
-        background-image: url(../../../images/ui-icons_ffffff_256x240.png)
+        background-image: url(../assets/images/ui-icons_ffffff_256x240.png)
         font-size: 17px !important
         margin-right: 2px !important
     button.ui-dialog-titlebar-close:hover
