--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -19,10 +19,13 @@
             display: flex
             flex-direction: column
             input
-              width: 80%
+              width: 85%
+              text-align: center
             label
               font-weight: normal
               margin-bottom: 0
+              width: 85%
+              text-align: center
           .lock-state
             cursor: pointer;
 
