TM-11703 Fix issue displaying task number

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -28,7 +28,7 @@
                                             <tbody>
                                                 <tr class="prop">
                                                     <td class="label U" nowrap="nowrap">
-                                                        <label style="min-width: 104px;"><span>Task # {{taskDetailModel.detail?.assetComment?.id}}</span></label>
+                                                        <label style="min-width: 104px;"><span>Task # {{taskDetailModel.detail?.assetComment?.taskNumber}}</span></label>
                                                     </td>
                                                     <td class="valueNW" colspan="5" style="max-width: 400px; font-weight:bold;">
                                                         <span>{{taskDetailModel.detail?.assetComment?.comment}}</span>
