TM-12004 Fixed more JS and CSS issues across the App

--- a/web-app/css/elements/general/kendoGrid.sass
+++ b/web-app/css/elements/general/kendoGrid.sass
@@ -25,7 +25,7 @@ body.skin-blue
           a.k-link
             color: $material_c_blue1_header_text !important
       .k-loading-image
-        background-image: url('../../dist/css/kendo/Default/loading-image.gif')
+        background-image: url('../dist/css/kendo/Default/loading-image.gif')
       .k-filter-row
         th
           padding: 5px 5px 5px 5px
